--- a/connect2learn/pubspec.yaml
+++ b/connect2learn/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  qr_flutter: ^4.0.0  # or the latest version
+  barcode_widget: ^2.0.0  # or the latest version
+  url_launcher: ^6.0.0  # or the latest version
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
