--- a/connect2learn/pubspec.yaml
+++ b/connect2learn/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_maps_flutter: ^2.1.1
+  google_maps_flutter_web: ^0.3.0+2
+  geolocator: ^7.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
