--- a/connect2learn/pubspec.yaml
+++ b/connect2learn/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
 
+  barcode_widget: any
+  url_launcher: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
