overall push for current page 2

--- a/connect2learn/android/app/build.gradle
+++ b/connect2learn/android/app/build.gradle
@@ -49,6 +49,8 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+
+        manifestPlaceholders += [auth0Domain: "dev-mtsbhy6pmvew1ebh.us.auth0.com", auth0Scheme: "https"]
     }
 
     buildTypes {
