--- a/connect2learn/android/app/src/main/AndroidManifest.xml
+++ b/connect2learn/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="connect2learn"
+        android:label="C2L"
         android:name="${applicationName}"
-        android:icon="@res/images/logo_small">
+        android:icon="@drawable/ic_launcher">
         <activity
-            android:name=".MainActivity"
+            android:name=".MainActivity" 
             android:exported="true"
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
