--- a/connect2learn/pubspec.yaml
+++ b/connect2learn/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
 
   barcode_widget: any
   url_launcher: any
+  qr_flutter: any
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
